<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/carImageCardView"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/producerCardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/producer_params"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/carImageCardView"
                app:layout_constraintTop_toTopOf="@+id/carImageCardView" />

            <TextView
                android:id="@+id/modelCardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/model_params"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/priceCardTextView"
                app:layout_constraintStart_toEndOf="@+id/carImageCardView"
                app:layout_constraintTop_toBottomOf="@+id/producerCardTextView" />

            <TextView
                android:id="@+id/priceCardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/price_params"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/carImageCardView"
                app:layout_constraintStart_toEndOf="@+id/carImageCardView" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>