<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/carEditImageButton"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/producerCardTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="2"
                        android:text="@string/producer_name"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/producerSpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/modelTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="2"
                        android:text="@string/model_name"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/modelSpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="3"
                        android:visibility="invisible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/bodyTypeTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="2"
                        android:text="@string/body_type"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/bodyTypeSpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/priceTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="2"
                        android:text="@string/price"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/priceEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="3"
                        android:inputType="number"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/yearTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="2"
                        android:text="@string/year_of_issue"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/yearEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="3"
                        android:inputType="number"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/powerTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="2"
                        android:text="@string/power"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/powerEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="3"
                        android:inputType="number"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/colorTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="2"
                        android:text="@string/color"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/colorEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="3"
                        android:inputType="text"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/transmissionTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="2"
                        android:text="@string/transmission"
                        android:textSize="16sp" />

                    <CheckBox
                        android:id="@+id/transmissionCheckBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="3" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>